# pond_monitor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  check-base-branch.yml
docs/: improvements.md
src/pond_monitor/: pipeline.py
src/pond_monitor/alerts/: base.py  console.py
src/pond_monitor/collectors/: shelly.py
src/pond_monitor/processing/: stream.py
src/pond_monitor/storage/: base.py  duckdb.py
src/shelly_plug/processing/: stream.py
src/shelly_plug/storage/: duckdb.py
