[project]
name = "pond-monitor"
version = "0.1.0"
description = "edge-to-cloud IoT pipeline with local buffering and cloud sync based on my pond's water pump"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "logging",
    "duckdb>=1.5.3",
    "colorlog>=6.10.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pond_monitor"]
